<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">On Tap</string>
    <string name="event_list_label_text">All Events</string>
    <string name="beer_list_label_text">All Beers</string>
    <string name="no_events_text">No events</string>
    <string name="no_beers_text">No beers</string>
    <string name="title_activity_beer_detail">Beer Details</string>
    <string name="action_settings">Settings</string>
    <string name="style_label_text">Style</string>
    <string name="brewer_label_text">Brewer</string>
    <string name="description_label_text">Description</string>
    <string name="packaging_label_text">Packaging</string>
    <string name="og_label_text">O.G.</string>
    <string name="fg_label_text">F.G.</string>
    <string name="abv_label_text">A.B.V.</string>
    <string name="ibu_label_text">I.B.U.</string>
    <string name="srm_label_text">S.R.M.</string>
    <string name="status_label_text">Status</string>
    <string name="kicked_text">Kicked</string>
    <string name="on_tap_number">On tap #</string>
    <string name="pouring">Now Pouring</string>
    <string name="on_deck">On Deck</string>
    <string name="section_text">--NEW SECTION--</string>
    <string name="refresh">Refresh</string>
    <string name="email_brewer">Email the Brewer</string>
    <string name="check_in_on_uptappd">Check in on Untappd</string>
    <string name="help">Help</string>
    <string name="sort_by_beer_name">Sort by Beer Name</string>
    <string name="sort_by_style">Sort by Style</string>
    <string name="sort_by_abv">Sort by ABV</string>
    <string name="sort_by_ibu">Sort by IBU</string>
    <string name="sort_by_srm">Sort by SRM</string>
    <string name="use_production_server">Show Barley Legal events</string>
    <string name="use_beta_server">Show testing and personal events</string>
    
</resources>