<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	tools:context=".BeerDetailActivity"    
	>

<LinearLayout
    android:id="@+id/beer_detail_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/beer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:paddingTop="6dip"
        android:textColor="#43bd00"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="SelectableText" />

    <TextView
        android:id="@+id/style_label" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="6dip"
        android:textSize="16sp"
        android:textStyle="bold"
		android:text="@string/style_label_text"
	/>
    <TextView
    	android:id="@+id/beer_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textColor="#acacac"
        android:textSize="14sp"
        tools:ignore="SelectableText"
    />
    <TextView
    	android:id="@+id/beer_style_override"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textColor="#acacac"
        android:textSize="14sp"
        tools:ignore="SelectableText"
    />
    
    <TextView
        android:id="@+id/brewer_label" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="6dip"
        android:textSize="16sp"
        android:textStyle="bold"
		android:text="@string/brewer_label_text"
	/>
    <TextView
    	android:id="@+id/brewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textColor="#acacac"
        android:textSize="14sp"
        tools:ignore="SelectableText"
    />
    
    <TextView
        android:id="@+id/description_label" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="6dip"
        android:textSize="16sp"
        android:textStyle="bold"
		android:text="@string/description_label_text"
	/>
    <TextView
    	android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textColor="#acacac"
        android:textSize="14sp"
        tools:ignore="SelectableText"
    />
    
    <RelativeLayout 
		android:id="@+id/packaging_layout" 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
        android:paddingTop="6dip"
    >
	<TextView
		android:id="@+id/packaging_label"
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:layout_alignParentLeft="true"
        android:textStyle="bold"
    	android:text="@string/packaging_label_text"
    />
	<TextView
	    android:id="@+id/packaging"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/packaging_label"
	    android:layout_alignParentRight="true"
	    tools:ignore="SelectableText"
	/>
	</RelativeLayout>
		
    <RelativeLayout 
		android:id="@+id/gravity_layout" 
	    android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >
    <LinearLayout 
		android:id="@+id/og_layout" 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentLeft="true" >
    <TextView
        android:id="@+id/og_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/label_horizontal_padding"
        android:text="@string/og_label_text"
        android:textStyle="bold" />
	<TextView
	    android:id="@+id/og"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    tools:ignore="SelectableText" />
	</LinearLayout>

    <LinearLayout
        android:id="@+id/fg_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >
   	<TextView
   	    android:id="@+id/fg_label"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:paddingRight="@dimen/label_horizontal_padding"
   	    android:text="@string/fg_label_text"
   	    android:textStyle="bold" />
	<TextView
	    android:id="@+id/fg"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    tools:ignore="SelectableText" />
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/abv_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true" >
   	<TextView
   	    android:id="@+id/abv_label"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:paddingRight="@dimen/label_horizontal_padding"
   	    android:text="@string/abv_label_text"
   	    android:textStyle="bold" />
	<TextView
	    android:id="@+id/abv"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    tools:ignore="SelectableText" />
	</LinearLayout>
   	</RelativeLayout>
   	
	<RelativeLayout 
		android:id="@+id/ibu_and_srm_layout" 
	    android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >
    <LinearLayout 
		android:id="@+id/ibu_layout" 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentLeft="true" >
    <TextView
        android:id="@+id/ibu_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/label_horizontal_padding"
        android:text="@string/ibu_label_text"
        android:textStyle="bold" />
	<TextView
	    android:id="@+id/ibu"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    tools:ignore="SelectableText" />
	</LinearLayout>
	</RelativeLayout>
    
</LinearLayout>
</ScrollView>